fix button alignment

--- a/web_src/css/user.css
+++ b/web_src/css/user.css
@@ -145,3 +145,7 @@
 .notifications-item:hover {
   background: var(--color-hover);
 }
+
+.notifications-buttons {
+  min-width: 74px;
+}
